--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/alertifyjs/build/css/alertify.css';
+@import "../node_modules/alertifyjs/build/css/themes/bootstrap.css";
+@import "../node_modules/alertifyjs/build/css/themes/default.css";
+
 
 body{
   font-family: Open Sans !important;
