adding experience and academic_level for RegistrationDoctor

--- a/src/app/Admin/login/login.component.html
+++ b/src/app/Admin/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="screen">
     <div class="screen__content">
-      <form class="login">
+      <form class="login" [formGroup]="authForm" (ngSubmit)="loginAdmin()">
         <div class="login__field">
           <i class="login__icon fas fa-user"></i>
-          <input type="text" class="login__input" placeholder="User name / Email">
+          <input type="text" class="login__input" placeholder=" Email"  formControlName="email">
         </div>
         <div class="login__field">
           <i class="login__icon fas fa-lock"></i>
-          <input type="password" class="login__input" placeholder="Password">
+          <input type="password" class="login__input" placeholder="Password" formControlName="password">
         </div>
-        <button class="button login__submit" routerLink="/dashboardAdmin" routerLinkActive="active">
+        <button class="button login__submit">
           <span class="button__text" >Log In Now</span>
           <i class="button__icon fas fa-chevron-right"></i>
         </button>
