--- a/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
+++ b/src/app/EspacePatient/sign-up-patient/sign-up-patient.component.html
@@ -39,30 +39,30 @@
         <div class="formbg">
           <div class="formbg-inner padding-horizontal--48">
             <h2 class="padding-bottom--15">Inscrire</h2>
-            <form id="stripe-login">
+            <form id="stripe-login" [formGroup]="patientForm" (ngSubmit)="signUpPatient()">
               <div class="field padding-bottom--24">
                 <label >Nom</label>
-                <input type="text" >
+                <input type="text" formControlName="firstname" required>
               </div>
               <div class="field padding-bottom--24">
                 <label >Prénom</label>
-                <input type="text" >
+                <input type="text" formControlName="lastname" required>
               </div>
               <div class="field padding-bottom--24">
                 <label >Email</label>
-                <input type="email" >
+                <input type="email" formControlName="email" required>
               </div>
               <div class="field padding-bottom--24">
                 <div class="grid--50-50">
                   <label >Password</label>
                 </div>
-                <input type="password" >
+                <input type="password" formControlName="password" required>
               </div>
 
               <div class="field padding-bottom--24 btn">
-              <button routerLink="/loginPatient" routerLinkActive="active" >Inscrire</button>
+              <button type="submit"  >Inscrire</button>
               </div>
-
+<!--routerLink="/loginPatient" routerLinkActive="active"-->
             </form>
             <a href="" style="color: #0066FF; margin-left: 8rem;"  routerLink="/loginPatient" routerLinkActive="active">vouz avez déja un compte</a>
 
