--- a/src/app/detail-profile/detail-profileA/ajout-chirurgie/ajout-chirurgie.component.html
+++ b/src/app/detail-profile/detail-profileA/ajout-chirurgie/ajout-chirurgie.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="ChirurgieForm" (ngSubmit)="addChirurgie()">
   <div class="form-group">
     <label for="exampleFormControlInput1">Nom chirurgie</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" formControlName="nomChirurgie">
+    <input type="text" class="form-control" id="exampleFormControlInput1" formControlName="name">
   </div>
 
   <div class="form-group">
@@ -14,13 +14,18 @@
     <img [src]="imgURL" style="width: 225px; height:200px ; margin-bottom: 1rem">
 
     <input type="file" accept="image/*" (change)="onSelectFile($event)" class="form-control-file"
-           id="exampleFormControlFile1" formControlName="imageChirurgie">
+           id="exampleFormControlFile1" formControlName="image">
   </div>
   <div class="form-group mt-4">
-    <label for="exampleFormControlInput3">Durée de chirurgie</label>
-    <input type="text" class="form-control" id="exampleFormControlInput3" formControlName="dureeChirurgie">
-  </div>
+    <label>Duration:</label>
+    <div formGroupName="duration">
+      <input formControlName="days" type="number" placeholder="Days">
+      <input formControlName="hours" type="number" placeholder="Hours">
+      <input formControlName="minutes" type="number" placeholder="Minutes">
+      <input formControlName="seconds" type="number" placeholder="Seconds">
+    </div></div>
   <div class="btn">
     <button type="submit" >Envoyer</button>
   </div>
+
 </form>
