--- a/src/app/detail-profile/detail-profileA/messages-med/messages-med.component.html
+++ b/src/app/detail-profile/detail-profileA/messages-med/messages-med.component.html
@@ -8,7 +8,7 @@
         <span><i class="bi bi-calendar-date-fill" style="color: indianred ; float: right ;"></i></span>
       </h6>
       <div class="btn">
-        <button  onclick="window.location.href ='detailMsg';">Voir detail</button>
+        <button  onclick="window.location.href ='detailMsgPatient';">Voir detail</button>
       </div>
     </div>
 
@@ -17,7 +17,7 @@
       <h6>Chirurgie des valves cardiaque </h6>
       <h6 style="font-weight: bold">20.03.2023</h6>
       <div class="btn">
-        <button  onclick="window.location.href ='detailMsg';">Voir detail</button>
+        <button  onclick="window.location.href ='detailMsgPatient';">Voir detail</button>
       </div>
     </div>
 
